--- a/emr-service/pom.xml
+++ b/emr-service/pom.xml
@@ -10,5 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>emr-service</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.rf</groupId>
+            <artifactId>emr-mapper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+    </dependencies>
 </project>
