--- a/emr-manage/src/main/resources/application.properties
+++ b/emr-manage/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 logging.config=classpath:log4j2.xml
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/emrDb
+
 spring.datasource.data-username=root
 spring.datasource.data-password=0hjQqjC7RzInYHQQ
 spring.datasource.tomcat.max-active=20
