--- a/emr-manage/pom.xml
+++ b/emr-manage/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>emr-manage</artifactId>
+    <packaging>war</packaging>
 
     <dependencies>
         <!-- 添加servlet依赖模块 -->
@@ -56,6 +57,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.rf.Application</mainClass>
+                </configuration>
             </plugin>
         </plugins>
         <resources>
